src/test/ui/parser/multitrait.stderr
error: expected one of `!`, `(`, `+`, `::`, `<`, `for`, `where`, or `{`, found `,`
  --> $DIR/multitrait.rs:5:9
   |
LL | impl Cmp, ToString for S {
   |         ^ expected one of 8 possible tokens here

error: aborting due to previous error

